Add test InitialContext